# processamento-livros-II-projeto-gutenberg-indece-remissivo-e-compress-o

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  config.h.in
include/: config.h  huffman.h  list.h  processaLivro.h  trie.h
input/: book1.txt  book11.txt
output/Huffman/Coded/: Book11
output/Sort/caso4/: 10book_words.txt  1book_words.txt  2book_words.txt  3book_words.txt  4book_words.txt  5book_words.txt  6book_words.txt  7book_words.txt  8book_words.txt  9book_words.txt  mostusedwords.txt
src/: huffman.cpp  processaLivro.cpp  trie.cpp
testes/: CMakeLists.txt
testes/huffman/: CMakeLists.txt  HuffmanCompress.cpp  HuffmanDecompress.cpp  buildTree.cpp  printTree.cpp
testes/trie/: CMakeLists.txt  mainTest.cpp  search.cpp
